; ModuleID = '/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/Util/Lzma/extr_LzmaUtil.c_Decode.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/Util/Lzma/extr_LzmaUtil.c_Decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LZMA_PROPS_SIZE = common dso_local global i32 0, align 4
@g_Alloc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @Decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Decode(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %7, align 4
  %11 = load i32, i32* @LZMA_PROPS_SIZE, align 4
  %12 = add nsw i32 %11, 8
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %9, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %10, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = trunc i64 %13 to i32
  %18 = call i32 @SeqInStream_Read(i32* %16, i8* %15, i32 %17)
  %19 = call i32 @RINOK(i32 %18)
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %20

20:                                               ; preds = %36, %2
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %21, 8
  br i1 %22, label %23, label %39

23:                                               ; preds = %20
  %24 = load i32, i32* @LZMA_PROPS_SIZE, align 4
  %25 = load i32, i32* %6, align 4
  %26 = add nsw i32 %24, %25
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8, i8* %15, i64 %27
  %29 = load i8, i8* %28, align 1
  %30 = zext i8 %29 to i32
  %31 = load i32, i32* %6, align 4
  %32 = mul nsw i32 %31, 8
  %33 = shl i32 %30, %32
  %34 = load i32, i32* %5, align 4
  %35 = add nsw i32 %34, %33
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %23
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %6, align 4
  br label %20

39:                                               ; preds = %20
  %40 = call i32 @LzmaDec_Construct(i32* %8)
  %41 = load i32, i32* @LZMA_PROPS_SIZE, align 4
  %42 = call i32 @LzmaDec_Allocate(i32* %8, i8* %15, i32 %41, i32* @g_Alloc)
  %43 = call i32 @RINOK(i32 %42)
  %44 = load i32*, i32** %3, align 8
  %45 = load i32*, i32** %4, align 8
  %46 = load i32, i32* %5, align 4
  %47 = call i32 @Decode2(i32* %8, i32* %44, i32* %45, i32 %46)
  store i32 %47, i32* %7, align 4
  %48 = call i32 @LzmaDec_Free(i32* %8, i32* @g_Alloc)
  %49 = load i32, i32* %7, align 4
  %50 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %50)
  ret i32 %49
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @RINOK(i32) #2

declare dso_local i32 @SeqInStream_Read(i32*, i8*, i32) #2

declare dso_local i32 @LzmaDec_Construct(i32*) #2

declare dso_local i32 @LzmaDec_Allocate(i32*, i8*, i32, i32*) #2

declare dso_local i32 @Decode2(i32*, i32*, i32*, i32) #2

declare dso_local i32 @LzmaDec_Free(i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
